--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -28,5 +28,7 @@ $info: #31ccec;
 $warning: #f2c037;
 
 $bilipink: #fb7299;
-$bg1: #f1f2f3;
+$bg1: #f1f1f1;
 $bg1-dark: #2e2e2e;
+
+$text2: #9499a0;
