--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,8 +12,16 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$typography-font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue,
-  Helvetica, Arial, PingFang SC, Hiragino Sans GB, Microsoft YaHei, sans-serif !default;
+$typography-font-family:
+  -apple-system,
+  BlinkMacSystemFont,
+  Helvetica Neue,
+  Helvetica,
+  Arial,
+  PingFang SC,
+  Hiragino Sans GB,
+  Microsoft YaHei,
+  sans-serif !default;
 
 $primary: #1976d2;
 $secondary: #26a69a;
